--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
+<h1>Sergio Oliveira</h1>
+<h2>Games Trainee Programmer</h2>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
